<resources>
    <string name="app_name">smb4</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="bought">Is bought?</string>
    <string name="productText">Text</string>
    <string-array name="color_list">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Magenta</item>
        <item>White</item>
        <item>Black</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="title_activity_options">OptionsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_product">Product window</string>
    <string name="add_store">Store window</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="is_bought">Is bought?</string>
    <string name="quantity">Quantity</string>
    <string name="submit">Save</string>
    <string name="color">Color</string>
    <string name="font_size">Size</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="name_param">Name:</string>
    <string name="price_param">Price:</string>
    <string name="description_param">Description:</string>
    <string name="quantity_param">Quantity:</string>
    <string name="radius_param">Radius:</string>
    <string name="geolocation_param">Geolocation:</string>
</resources>