<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_store"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/name_set"/>

    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:imeOptions="actionNext"
        android:inputType="text" />

    <EditText
        android:id="@+id/radius_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/radius_param"
        android:imeOptions="actionNext"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/submit"
        android:id="@+id/submit_button"/>
</LinearLayout>